--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@nestjs/schedule": "^3.0.2",
     "@nestjs/swagger": "^7.1.7",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "moment": "^2.29.4",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
