--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:create": "yarn typeorm -- migration:create ./src/database/typeorm/migrations/$npm_config_name"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
